--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Drew Wyatt <drew.j.wyatt@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^7.0.5",
     "@types/react": "^15.0.13",
+    "@types/react-bootstrap": "^0.0.45",
     "@types/react-hot-loader": "^3.0.1",
     "awesome-typescript-loader": "^3.0.8",
     "babel-core": "^6.23.1",
@@ -17,6 +19,7 @@
     "css-loader": "^0.26.2",
     "html-webpack-plugin": "^2.28.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "ts-loader": "^2.0.1",
