--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "moduleResolution": "node",
         "jsx": "preserve",
 		"strictNullChecks": true,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+        "baseUrl": "src"
     },
     "exclude": [
         "node_modules",
