--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.2",
     "html-webpack-plugin": "^2.28.0",
+    "json": "^9.0.4",
+    "loader": "^2.1.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
