--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "json": "^9.0.4",
         "loader": "^2.1.1",
         "markdown-loader": "^2.0.0",
+        "optimize-css-assets-webpack-plugin": "^1.3.1",
         "react": "^15.4.2",
         "react-bootstrap": "^0.30.7",
         "react-dom": "^15.4.2",
