--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
-    "name": "drewwyatt.com",
-    "version": "2.0.0",
-    "repository": {
-      "type": "git",
-      "url": "git@github.com:drewwyatt/drewwyatt.com.git"
-    },
-    "author": "Drew Wyatt <drew.j.wyatt@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-    },
-    "dependencies": {
-    }
+  "name": "drewwyatt.com",
+  "version": "2.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:drewwyatt/drewwyatt.com.git"
+  },
+  "author": "Drew Wyatt <drew.j.wyatt@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint --ext=ts,tsx src/**",
+    "tsc": "tsc"
+  },
+  "dependencies": {
+    "next": "9.4.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.11",
+    "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "typescript": "^3.9.5"
+  }
 }
