--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^7.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   }
 }
