--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
-    "name": "drewwyatt",
-    "version": "1.0.0",
-    "main": "server.js",
-    "repository": "git@github.com:drewwyatt/drewwyatt.com.git",
-    "author": "Drew Wyatt <drew.j.wyatt@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-        "build": "NODE_ENV=PRODUCTION webpack -p"
-    },
-    "dependencies": {
-        "@types/node": "^7.0.5",
-        "@types/react": "^15.0.13",
-        "@types/react-bootstrap": "^0.0.45",
-        "@types/react-hot-loader": "^3.0.1",
-        "awesome-typescript-loader": "^3.0.8",
-        "babel-core": "^6.23.1",
-        "babel-loader": "^6.3.2",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-react": "^6.23.0",
-        "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.26.2",
-        "extract-text-webpack-plugin": "^2.0.0",
-        "html-loader": "^0.4.5",
-        "html-webpack-plugin": "^2.28.0",
-        "json": "^9.0.4",
-        "loader": "^2.1.1",
-        "markdown-loader": "^2.0.0",
-        "optimize-css-assets-webpack-plugin": "^1.3.1",
-        "react": "^15.4.2",
-        "react-bootstrap": "^0.30.7",
-        "react-dom": "^15.4.2",
-        "react-hot-loader": "^3.0.0-beta.2",
-        "tslint": "^4.5.1",
-        "tslint-loader": "^3.4.2",
-        "typescript": "^2.2.1",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.4.1",
-        "webpack-hot-middleware": "^2.17.1"
-    }
+  "name": "drewwyatt.com",
+  "version": "2.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:drewwyatt/drewwyatt.com.git"
+  },
+  "author": "Drew Wyatt <drew.j.wyatt@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next",
+    "build": "next build && next export",
+    "start": "next start",
+    "lint": "eslint --ext=ts,tsx src/**",
+    "tsc": "tsc"
+  },
+  "dependencies": {
+    "next": "9.4.4",
+    "normalize.css": "^8.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.11",
+    "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
+  }
 }
