--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
+  },
+  "volta": {
+    "node": "18.15.0"
   }
 }
